--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <div class="container">
-        <div class="card">
-          <img class="illustration-hero-img" src="images/illustration-hero.svg">
+        <main class="card">
+          <img class="illustration-hero-img" alt="card-image" src="images/illustration-hero.svg">
           <h1 class="order-title">Order Summary</h1>
           <p class="card-description">
             You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
           </p>
           <div class="annual-plan-container">
-            <img src="images/icon-music.svg">
+            <img alt="music-icon" src="images/icon-music.svg">
             <div class="price-container">
               <span class="annual-plan-price-text"><strong>Annual Plan</strong></span><br>
               <span class="annual-plan-price">$59.99/year</span>
@@ -30,7 +30,7 @@
           </div>
           <a class="payment-button" href="#">Proceed to Payment</a>
           <a class="cancel-order-link" href="#">Cancel Order</a>  
-        </div>      
+        </main>      
         
         <div class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
